Update and rename JS/validaCEP-Divi to Divi/validaCEP-Divi.html

--- a/Divi/validaCEP-Divi.html
+++ b/Divi/validaCEP-Divi.html
@@ -1,5 +1,5 @@
 <script>
-  cep = document.querySelector('#et_pb_contact_cep_0');
+  var cep = document.querySelector('#et_pb_contact_cep_0');
   //Adiciona pattern para o input do CEP
   cep.pattern = '[\\d]{5}-?[\\d]{3}';
   //Evento chamado quando o input perde o foco
