Update and rename JS/validaCPF-CNPJ-Divi to Divi/validaCPF-CNPJ-Divi.html

--- a/Divi/validaCPF-CNPJ-Divi.html
+++ b/Divi/validaCPF-CNPJ-Divi.html
@@ -1,5 +1,5 @@
 <script>
-  cpf = document.querySelector('#et_pb_contact_cpf_0');
+  var cpf = document.querySelector('#et_pb_contact_cpf_0');
   //Evento chamado quando o input perde o foco
   cpf.addEventListener('blur', function( event ) {
     //Condição para testar se o CPF ou CNPJ é válido
