--- a/Divi/cJS - card.js (Jesse Pollak).html
+++ b/Divi/cJS - card.js (Jesse Pollak).html
@@ -6,27 +6,11 @@
     }
   }
 </style>
-<!-- Importando jQuery -->
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<!-- Importando jQuery.mask -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.min.js"></script>
 <!-- Importa o script card.js diretamente do Github -->
 <script src="https://cdn.jsdelivr.net/gh/jessepollak/card/dist/card.js"></script>
 <!-- Gera o cartão virtual a partir das funções de card.js -->
 <script>
-  $(document).ready(function() {
-    <!-- Configuração das máscaras -->
-    var numeroCartao = document.querySelector('[name="et_pb_contact_número_do_cartão_1"]');
-    var validadeCartao = document.querySelector('[name="et_pb_contact_validade_(mês/ano)_1"]');
-    var codigoSegurancaCartao = document.querySelector('[name="et_pb_contact_cód._de_segurança_1"]');
-    var cpfCartao = document.querySelector('[name="et_pb_contact_cpf_do_titular_1"]');
-    
-    $(numeroCartao).mask('0000 0000 0000 0000');
-    $(validadeCartao).mask('99/9999');
-    $(codigoSegurancaCartao).mask('0009');
-    $(cpfCartao).mask('000.000.000-00', {reverse: true});
-  });
-  //Capturando o formulário e os campos a serem usados
+  //Capturando o formulário
   var formCartao = document.querySelector('#et_pb_contact_form_1 > div.et_pb_contact > form');
   var formDiv = document.querySelector('#et_pb_contact_form_1 > div.et_pb_contact');
   var divEl = document.createElement('div');  
@@ -65,3 +49,4 @@
     debug: true // optional - default false
   });
 </script>
+<!-- Link do projeto: https://github.com/jessepollak/card -->
