--- a/Tray/contador-de-visitas.html
+++ b/Tray/contador-de-visitas.html
@@ -1,3 +1,6 @@
+<!-- Importando Font Awesome -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 <div id="customers_view" data-customer-view="15, 12, 8, 5, 7, 6, 11, 12, 4, 14, 13, 17">
   <i class="fa fa-eye" aria-hidden="true"></i>
   <label></label> 
